--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -14,7 +14,7 @@
 
 
 <div class ="m-3"><div id="map" style="width:100%;height:300px;z-index: 0;"></div></div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55748873ce3778b86bb7057ea1fd9548&libraries=services"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=48&libraries=services"></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
