--- a/app/views/home/_map.html.erb
+++ b/app/views/home/_map.html.erb
@@ -15,7 +15,7 @@
     
     
 <div class ="m-3"><div id="map" style="width:100%;height:400px;z-index: 0;"></div></div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=&libraries=services"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= ENV['DAUM_MAP_API'] %>&libraries=services"></script>
 <script>
 
 
