--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -14,7 +14,7 @@
 
 
 <div class ="m-3"><div id="map" style="width:100%;height:300px;z-index: 0;"></div></div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=&libraries=services"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= ENV['DAUM_MAP_API'] %>&libraries=services"></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
