--- a/app/views/products/index_penalty.html.erb
+++ b/app/views/products/index_penalty.html.erb
@@ -13,7 +13,7 @@
 
 <div class ="m-3"><div id="map" style="width:100%;height:300px;z-index: 0;"></div></div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55748873ce3778b86bb7057ea1fd9548"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= ENV['DAUM_MAP_API'] %>"></script>
       
       
 <div class="card-body">
